# DiscordClone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: continues_integration.yml  continuous_integration.yml  docker_distribution.yml
Client/: CMakeLists.txt
Client/include/: Hotkeys.hpp  InputVoice.hpp
Client/src/: InputVoice.cpp  OutputVoice.cpp  main.cpp
Client/src/Platform/Linux/: LinuxHotkeys.cpp
Client/src/Platform/Windows/: WindowsHotkeys.cpp
ClientLibrary/: CMakeLists.txt
ClientLibrary/include/: Export.hpp  Functionality.hpp  InputVoice.hpp  OutputVoice.hpp
ClientLibrary/src/: Functionality.cpp  InputVoice.cpp  OutputVoice.cpp
DiscordCloneClient/: CMakeLists.txt
DiscordCloneClient/include/: Hotkeys.hpp  Settings.hpp  Utils.hpp
DiscordCloneClient/include/Checks/: Check.hpp  CheckInputStream.hpp  CheckMicrophone.hpp  CheckOutputStream.hpp  CheckSocket.hpp  CheckSpeaker.hpp  CheckStream.hpp
DiscordCloneClient/include/Commands/: Command.hpp  Connect.hpp  Echo.hpp  Exit.hpp  GetInputVolume.hpp  GetMicrophoneVolume.hpp  GetOutputVolume.hpp  GetSpeakerVolume.hpp  GetUsers.hpp  GetVersion.hpp  MuteOrUnmute.hpp  OverrideInputDeviceId.hpp  OverrideMicrophoneDeviceId.hpp  OverrideOutputDeviceId.hpp  OverrideSpeakerDeviceId.hpp  PingCommand.hpp  SetInputVolume.hpp  SetMicrophoneVolume.hpp  SetOutputVolume.hpp  SetSpeakerVolume.hpp
DiscordCloneClient/include/Wrappers/: InputVoice.hpp  MicrophoneWrapper.hpp  OutputVoice.hpp  SocketWrapper.hpp  SpeakerWrapper.hpp
DiscordCloneClient/src/: Settings.cpp  Utils.cpp  main.cpp
DiscordCloneClient/src/Checks/: Check.cpp  CheckInputStream.cpp  CheckMicrophone.cpp  CheckOutputStream.cpp  CheckSocket.cpp  CheckSpeaker.cpp  CheckStream.cpp
DiscordCloneClient/src/Commands/: Command.cpp  Connect.cpp  Echo.cpp  Exit.cpp  GetInputVolume.cpp  GetMicrophoneVolume.cpp  GetOutputVolume.cpp  GetSpeakerVolume.cpp  GetUsers.cpp  GetVersion.cpp  MuteOrUnmute.cpp  OverrideInputDeviceId.cpp  OverrideMicrophoneDeviceId.cpp  OverrideOutputDeviceId.cpp  OverrideSpeakerDeviceId.cpp  PingCommand.cpp  SetInputVolume.cpp  SetMicrophoneVolume.cpp  SetOutputVolume.cpp  SetSpeakerVolume.cpp
DiscordCloneClient/src/Platform/Linux/: LinuxHotkeys.cpp
DiscordCloneClient/src/Platform/Windows/: WindowsHotkeys.cpp
DiscordCloneClient/src/Wrappers/: InputVoice.cpp  MicrophoneWrapper.cpp  OutputVoice.cpp  SocketWrapper.cpp  SpeakerWrapper.cpp
DiscordCloneClientLibrary/: CMakeLists.txt
DiscordCloneClientLibrary/include/: Constants.hpp  Export.hpp  Functionality.hpp  InputVoice.hpp  Microphone.hpp  OutputVoice.hpp  Speaker.hpp  c_api.h
DiscordCloneClientLibrary/src/: Functionality.cpp  InputVoice.cpp  Microphone.cpp  OutputVoice.cpp  Speaker.cpp  c_api.cpp
DiscordCloneClientResources/: CMakeLists.txt
DiscordCloneClientResources/include/: Resources.hpp
DiscordCloneClientResources/src/: Resources.cpp
DiscordCloneServer/: config.json
DiscordCloneServer/include/: VoiceServer.hpp
DiscordCloneServer/include/Executors/: Room.hpp
DiscordCloneServer/src/: VoiceServer.cpp
DiscordCloneServer/src/Executors/: Ping.cpp
DiscordCloneUpdater/: CMakeLists.txt
DiscordCloneUpdater/include/: Releases.hpp
DiscordCloneUpdater/src/: Releases.cpp  main.cpp
Server/: CMakeLists.txt  config.json
Server/include/: VoiceServer.hpp
Server/include/Executors/: Ping.hpp  Room.hpp
Server/settings/: web.json
Server/src/: VoiceServer.cpp  main.cpp
Server/src/Executors/: Room.cpp
UDPSocket/: CMakeLists.txt
UDPSocket/include/: UDPClientSocket.hpp  UDPServerSocket.hpp  UDPSocket.hpp
UDPSocket/src/: UDPClientSocket.cpp  UDPServerSocket.cpp  UDPSocket.cpp
docker/: Dockerfile
